finially figured out flex layout for sticky footer!

--- a/portfolio/src/Footer.css
+++ b/portfolio/src/Footer.css
@@ -1,6 +1,6 @@
 
 
-.Site {
+/* .Site {
     display: flex;
     flex-direction: column;
     align-self: center;
@@ -11,4 +11,4 @@
 .Site-content {
     flex: auto;
     width: 100%;
-}
+} */
