--- a/portfolio/src/App.css
+++ b/portfolio/src/App.css
@@ -3,37 +3,49 @@
   color: white;
 }
 
-html {
-  height: 100%;
-  overflow-y: scroll;
+.App {
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
 }
 
-body {
-  background-color: black;
+.Site-content {
+display: flex;
+flex-grow: 1;
+background-color: black;
 }
+
 
 .nav {
   margin-top: 200px;
 }
 
 p {
+  /* background-color: blue; */
   font-size: 1.3rem;
 }
 
-footer {
-  font-size: 1.2rem;
-  opacity: 1.0;
-  position: static;
+
+#footer-wrapper {
+ padding: 10px;
+  background-color: grey;
 }
 
 
-.App {
-  text-align: center;
+#nav-wrapper {
+  /* background-color: blue; */
+  font-size: 1.3rem;
+}
+
+#logo-wrapper {
+display: flex;
+/* background-color: pink; */
 }
 
 .App-logo {
-  width: 300px;
-  height: 300px;
+  max-width: 80%;
+  height: auto;
   padding: 40px;
   margin-top: 30px;
   opacity: 1.0;
@@ -43,15 +55,13 @@ footer {
 @media only screen and (max-width: 1024px) {}
 
 @media only screen and (max-width: 768px) {
-  .App-logo {
-    /* position: fixed; */
-    width: 200px;
-    height: 200px;
+  /* .App-logo {
+    width: 60%;
+    height: auto;
     padding: 20px;
-    margin-left: -280px;
     margin-top: 75px;
-    opacity: 0.0;
-  }
+    opacity: 1.0;
+  } */
 }
 
 @media only screen and (max-width: 480px) {}
