--- a/portfolio/src/App.css
+++ b/portfolio/src/App.css
@@ -17,27 +17,6 @@ background-color: black;
 }
 
 
-.nav {
-  margin-top: 200px;
-}
-
-p {
-  /* background-color: blue; */
-  font-size: 1.3rem;
-}
-
-
-#footer-wrapper {
- padding: 10px;
-  background-color: grey;
-}
-
-
-#nav-wrapper {
-  /* background-color: blue; */
-  font-size: 1.3rem;
-}
-
 #logo-wrapper {
 display: flex;
 /* background-color: pink; */
@@ -50,6 +29,47 @@ display: flex;
   margin-top: 30px;
   opacity: 1.0;
 }
+
+#stripe-one {
+  width: 28px;
+  background-color: blue;
+}
+
+#stripe-two {
+  width: 20px;
+  background-color: green;
+}
+
+#stripe-three {
+  width: 7.5px;
+  background-color: red;
+}
+
+#nav-wrapper {
+  background-color: blue;
+  font-size: 1.2rem;
+width: 300px;
+  margin-left: 250px;
+}
+
+
+nav {
+  margin-top: 300px;
+}
+
+p {
+  /* background-color: blue; */
+  font-size: 1.3rem;
+}
+
+
+#footer-wrapper {
+ padding: 10px;
+  background-color: black;
+}
+
+
+
 
 
 @media only screen and (max-width: 1024px) {}
