--- a/portfolio/src/App.css
+++ b/portfolio/src/App.css
@@ -2,13 +2,17 @@
   font-family: 'Roboto Condensed', sans-serif;
 
 }
+html, body {
+  width: 100%;
+  height: 100%;
+  background-color: #EFEBE1;
 
+}
 .App {
-  /* text-align: center; */
+  overflow-x: hidden;
   display: grid;
   height: 100vh;
   width: 100vw;
-  background-color: #EFEBE1;
   grid-template-columns: 125px 1fr 125px;
   grid-template-rows:  50px 1fr 1fr 1fr 50px;
   grid-column-gap: 10px;
@@ -24,18 +28,22 @@ flex-grow: 1;
 } */
 
 .top-bar {
+  position: fixed;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
   background-color: #2B9395;
-  grid-column-start: 1;
+  width: 100vw;
+  height: 50px;
+  /* grid-column-start: 1;
   grid-column-end: 6;
-  grid-row-start: 1;
+  grid-row-start: 1; */
   /* width: 100%; */
 }
 
 .title {
+  background-color: #2B9395;
   grid-column-start: 1;
   /* grid-column-end: 3; */
   grid-row-start: 2;
@@ -44,7 +52,8 @@ flex-grow: 1;
   /* background-color: red; */
 }
 
-.nav-items {
+nav {
+  background-color: #2B9395;
   font-size: 1.0em;
   grid-column-start: 3;
   grid-row-start: 2;
@@ -53,25 +62,25 @@ flex-grow: 1;
 
 
 .logo-div {
-width: auto;
+width: 175px;
 height: 207px;
 display: flex;
 justify-content: center;
-align-items: center;
+align-items: flex-start;
 /* background-color: pink; */
-margin-top: 10px;
-margin-left: 100px;
+margin-left: 22px;
+grid-column-start: 1;
+grid-row-start: 2;
 }
 
 .App-logo {
 width: auto;
 height: 100%;
-  /* padding: 40px; */
-  /* margin-top: 30px; */
 
 }
 
 #main-intro{
+
   display: flex;
   justify-content: center;
   align-items: center;
@@ -80,7 +89,6 @@ height: 100%;
   grid-column-start: 2;
   /* grid-column-end: 4; */
   grid-row-start: 3;
-  padding: 50px;
   /* background-color: green; */
 }
 
@@ -93,11 +101,12 @@ height: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
- /* padding: 20px; */
+ padding: 10px;
   /* background-color: red; */
   grid-row-start: 6;
   grid-column-start: 1;
   grid-column-end: 6;
+  /* background-color: pink; */
 }
 
 
