got some icons going on the Appbar

--- a/portfolio/src/App.css
+++ b/portfolio/src/App.css
@@ -27,15 +27,14 @@ flex-grow: 1;
 
 } */
 
-.top-bar {
-  position: fixed;
+.top-nav {
+  /* position: fixed;
   display: flex;
-  flex-direction: row;
   justify-content: space-between;
   align-items: center;
-  background-color: #2B9395;
+
   width: 100vw;
-  height: 50px;
+  height: 60px; */
   /* grid-column-start: 1;
   grid-column-end: 6;
   grid-row-start: 1; */
@@ -52,13 +51,7 @@ flex-grow: 1;
   /* background-color: red; */
 }
 
-nav {
-  background-color: #2B9395;
-  font-size: 1.0em;
-  grid-column-start: 3;
-  grid-row-start: 2;
-  margin-right: 10px;
-}
+
 
 
 .logo-div {
@@ -69,6 +62,7 @@ justify-content: center;
 align-items: flex-start;
 /* background-color: pink; */
 margin-left: 22px;
+margin-top: 20px;
 grid-column-start: 1;
 grid-row-start: 2;
 }
