--- a/portfolio/src/App.css
+++ b/portfolio/src/App.css
@@ -1,84 +1,117 @@
 * {
-  font-family: 'Roboto Condensed', sans-serif;
-
+  font-family: 'Oswald', sans-serif;
 }
+
 html, body {
   width: 100%;
   height: 100%;
   background-color: #EFEBE1;
-
+  margin: 0;
 }
+
 .App {
   overflow-x: hidden;
   display: grid;
   height: 100vh;
   width: 100vw;
   grid-template-columns: 125px 1fr 125px;
-  grid-template-rows:  50px 1fr 1fr 1fr 10px;
+  grid-template-rows: 50px 1fr 1fr 1fr 10px;
   grid-column-gap: 10px;
   grid-row-gap: 10px;
   color: black;
 }
-
-
+.top-bar {
+  font-size: 1.2em !important;
+}
 .logo-div {
-width: 150px;
-height: 175px;
-display: flex;
-justify-content: center;
-align-items: flex-start;
-margin-left: 22px;
-margin-top: 20px;
-grid-column-start: 1;
-grid-row-start: 2;
-/* background-color: red; */
+  width: 150px;
+  height: 175px;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: flex-start;
+  margin-left: 22px;
+  margin-top: 22px;
+  grid-column-start: 1;
+  grid-row-start: 2;
+  /* background-color: red; */
 }
 
 .App-logo {
-width: 100%;
-height: auto;
-
+  width: 100%;
+  height: auto;
 }
 
-#main-intro{
+
+#main-intro {
   display: flex;
   justify-content: center;
   align-items: center;
   grid-column-start: 2;
   grid-row-start: 3;
+  /* background-color: green; */
 }
 
+
 .intro-text {
+  font-size: 1.3em;
   /* background-color: pink; */
-  width: 400px;
+  width: 600px;
 }
 
 footer {
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: 5px;
+  padding: 10px;
   background-color: #2B9395;
+  width: 100vw;
   font-weight: bold;
   grid-row-start: 6;
   grid-column-start: 1;
-  grid-column-end: 6;
+  box-shadow: rgba(0, 0, 0, 0.12) 0px -1px 6px, rgba(0, 0, 0, 0.12) 0px -1px 4px;
 }
 
 
 
-/*
+/*MEDIA QUERIES */
 
-@media only screen and (max-width: 1024px) {}
+@media (min-width: 250px) and (max-width: 479px) {
+  .top-bar {
+    font-size: .6em !important;
+  }
+  .logo-div {
+    width: 75px;
+    height: 100px;
+  }
+  .github-icon, .email-icon, .linked-in-icon {
+    width: 18px;
+    height: 18px;
+    margin-right: 12px !important;
+    margin-top: 14px !important;
+  }
 
-@media only screen and (max-width: 768px) {
-  /* .App-logo {
-    width: 60%;
-    height: auto;
-    padding: 20px;
-    margin-top: 75px;
-    opacity: 1.0;
-  } */
-/* } */
+  footer {
+    font-size: .6em;
+  }
 
-/* @media only screen and (max-width: 480px) {} */
+}
+
+@media (min-width: 480px) and (max-width: 768px) {
+  .top-bar {
+    font-size: .9em !important;
+  }
+  .logo-div {
+    width: 100px;
+    height: 125px;
+  }
+  .github-icon, .email-icon, .linked-in-icon {
+    width: 20px;
+    height: 20px;
+    margin-right: 12px !important;
+    margin-top: 14px !important;
+  }
+  footer {
+    font-size: .7em;
+  }
+}
