--- a/portfolio/src/App.css
+++ b/portfolio/src/App.css
@@ -5,7 +5,7 @@
 html, body {
   width: 100%;
   height: 100%;
-  background-color: #EFEBE1;
+  background-color: rgb(230, 230, 230);
   margin: 0;
 }
 
@@ -13,16 +13,18 @@ html, body {
   overflow-x: hidden;
   display: grid;
   height: 100vh;
-  width: 100vw;
+  /* width: 100vw; */
   grid-template-columns: 125px 1fr 125px;
   grid-template-rows: 50px 1fr 1fr 1fr 10px;
   grid-column-gap: 10px;
   grid-row-gap: 10px;
   color: black;
 }
-.top-bar {
-  font-size: 1.2em !important;
+.icon {
+  margin-top: 300px;
+  color: white;
 }
+
 .logo-div {
   width: 150px;
   height: 175px;
@@ -41,9 +43,11 @@ html, body {
   width: 100%;
   height: auto;
 }
+.github-icon, .email-icon, .linked-in-icon {
+  fill: white;
+}
 
-
-#main-intro {
+.main-intro {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -54,19 +58,22 @@ html, body {
 
 
 .intro-text {
-  font-size: 1.3em;
+  font-size: 1.1em;
   /* background-color: pink; */
   width: 600px;
 }
 
 footer {
+  position: sticky;
   display: flex;
   justify-content: center;
   align-items: center;
   padding: 10px;
-  background-color: #2B9395;
+  background-color: black;
+  opacity: .8;
   width: 100vw;
   font-weight: bold;
+  color: white;
   grid-row-start: 6;
   grid-column-start: 1;
   box-shadow: rgba(0, 0, 0, 0.12) 0px -1px 6px, rgba(0, 0, 0, 0.12) 0px -1px 4px;
