--- a/portfolio/src/App.css
+++ b/portfolio/src/App.css
@@ -6,45 +6,54 @@ html, body {
   width: 100%;
   height: 100%;
   background-color: rgb(230, 230, 230);
-  margin: 0;
 }
 
 .App {
-  overflow-x: hidden;
+  /* overflow-x: hidden; */
   display: grid;
   height: 100vh;
   /* width: 100vw; */
-  grid-template-columns: 125px 1fr 125px;
+  grid-template-columns: 170px 800px 125px;
   grid-template-rows: 50px 1fr 1fr 1fr 10px;
   grid-column-gap: 10px;
   grid-row-gap: 10px;
   color: black;
 }
-.icon {
-  margin-top: 300px;
-  color: white;
-}
+
 
 .logo-div {
+  opacity: .8;
+  position: fixed;
   width: 150px;
   height: 175px;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
   align-items: flex-start;
-  margin-left: 22px;
-  margin-top: 22px;
+  margin-left: 18px;
+  margin-top: 80px;
   grid-column-start: 1;
   grid-row-start: 2;
   /* background-color: red; */
 }
 
-.App-logo {
-  width: 100%;
-  height: auto;
-}
 .github-icon, .email-icon, .linked-in-icon {
   fill: white;
+}
+
+.main-image-div{
+  /* position: fixed; */
+  margin-top: 40px;
+  width: 800px;
+  height: auto;
+  grid-column-start: 2;
+  grid-row-start: 2;
+  /* opacity: .8; */
+}
+
+.web-design-image {
+  width: 100%;
+  height: auto;
 }
 
 .main-intro {
@@ -56,23 +65,28 @@ html, body {
   /* background-color: green; */
 }
 
-
 .intro-text {
+  /* position: fixed; */
   font-size: 1.1em;
   /* background-color: pink; */
-  width: 600px;
+  width: 800px;
 }
 
+
 footer {
-  position: sticky;
+  left: 0;
+  bottom: 0;
+  position: fixed;
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: 10px;
+  padding: 8px;
   background-color: black;
   opacity: .8;
   width: 100vw;
-  font-weight: bold;
+  height: 20px;
+  font-size: .8em;
+  font-weight: lighter;
   color: white;
   grid-row-start: 6;
   grid-column-start: 1;
@@ -113,9 +127,9 @@ footer {
     height: 125px;
   }
   .github-icon, .email-icon, .linked-in-icon {
-    width: 20px;
-    height: 20px;
-    margin-right: 12px !important;
+    width: 22px;
+    height: 22px;
+    margin-right: 20px !important;
     margin-top: 14px !important;
   }
   footer {
