--- a/portfolio/src/App.css
+++ b/portfolio/src/App.css
@@ -3,38 +3,38 @@
 }
 
 html, body {
+  overflow-x: hidden;
   width: 100%;
   height: 100%;
   background-color: rgb(230, 230, 230);
 }
 
 .App {
-  /* overflow-x: hidden; */
   display: grid;
-  height: 100vh;
-  width: 100vw;
-  grid-template-columns: 200px  8fr 2fr ;
+  grid-template-columns: 175px 750px;
   grid-template-rows: 50px 350px 200px 400px 200px;
   grid-column-gap: 10px;
   grid-row-gap: 10px;
-  color: black;
 }
 
+@keyframes logo {
+  from {left: -70px; opacity: 0}
+  to {left: 18px; opacity: .8;}
+}
 
 .logo-div {
   opacity: .8;
   position: fixed;
   width: 150px;
   height: 100vh;
-  margin-left: 18px;
+  left: 18px;
   margin-top: 80px;
-  /* grid-column-start: ;
-  grid-row-start: 2; */
-  /* background-color: red; */
+  animation-name: logo;
+  animation-duration: .8s;
 }
 
 .main-image-div{
-/* max-width: 750px; */
+  max-width: 750px;
   margin-top: 20px;
   grid-column-start: 2;
   grid-row-start: 2;
@@ -43,7 +43,7 @@ html, body {
 }
 
 .web-design-image {
-  /* width: 100%; */
+  max-width: 100%;
 }
 
 .into-headline {
@@ -51,6 +51,7 @@ html, body {
 }
 
 .main-intro {
+  max-width: 750px;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -70,7 +71,7 @@ html, body {
 }
 
 .next-image-div {
-  width: 750px;
+  max-width: 750px;
   display: flex;
   align-items: center;
   height: auto;
@@ -97,12 +98,14 @@ html, body {
   padding-left: 30px;
 }
 .menu-icon-div {
-  align-self: center;
-    margin-right: 25px;
-    margin-top: 6px;
-    margin-left: 10px;
+
 }
 
+
+
+/* .menu-svg:enabled {
+  transform:rotate(0.25turn);
+} */
 
 a {
   text-decoration: none!important
@@ -124,7 +127,6 @@ a {
 }
 
 footer {
-  margin-top: 300px;
   left: 0;
   bottom: 0;
   position: fixed;
@@ -194,8 +196,13 @@ footer {
   .App {
     grid-template-columns: 1fr 600px 1fr;
   }
+
+  .logo-div {
+    width: 125px;
+
+  }
   .main-image-div{
-  max-width: 600px;
+    max-width: 600px;
     margin-top: 20px;
     grid-column-start: 2;
     grid-row-start: 2;
