--- a/portfolio/src/App.css
+++ b/portfolio/src/App.css
@@ -1,9 +1,11 @@
 * {
-  font-family: 'Oswald', sans-serif;
+  /* font-family: 'Roboto Condensed', sans-serif; */
+  font-family: 'Abel', sans-serif;
+
 }
 
 html, body {
-  overflow-x: hidden;
+  /* overflow-x: hidden; */
   width: 100%;
   height: 100%;
   background-color: rgb(230, 230, 230);
@@ -11,7 +13,7 @@ html, body {
 
 .App {
   display: grid;
-  grid-template-columns: 175px 750px;
+  grid-template-columns: 8px 1% 125px 750px 1fr;
   grid-template-rows: 50px 350px 200px 400px 200px;
   grid-column-gap: 10px;
   grid-row-gap: 10px;
@@ -25,18 +27,23 @@ html, body {
 .logo-div {
   opacity: .8;
   position: fixed;
-  width: 150px;
-  height: 100vh;
+  width: 125px;
   left: 18px;
   margin-top: 80px;
+  grid-column-start: 2;
+  grid-row-start: 2;
   animation-name: logo;
   animation-duration: .8s;
 }
 
+.logo-svg {
+  width: 100%;
+}
+
 .main-image-div{
-  max-width: 750px;
+
   margin-top: 20px;
-  grid-column-start: 2;
+  grid-column-start: 4;
   grid-row-start: 2;
   margin-bottom: 300px;
   /* opacity: .8; */
@@ -48,15 +55,16 @@ html, body {
 
 .into-headline {
   text-transform: uppercase;
+  font-weight: bold;
 }
 
 .main-intro {
-  max-width: 750px;
+  /* width: 750px; */
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  grid-column-start: 2;
+  grid-column-start: 4;
   grid-row-start: 3;
   /* background-color: green; */
 }
@@ -71,15 +79,14 @@ html, body {
 }
 
 .next-image-div {
-  max-width: 750px;
+  /* width: 750px; */
   display: flex;
   align-items: center;
   height: auto;
-  grid-column-start: 2;
+  grid-column-start: 4;
   grid-row-start: 4;
   margin-top: 50px;
   /* background-color: pink; */
-  padding-left: 30px;
 }
 
 .next-image {
@@ -93,19 +100,12 @@ html, body {
   align-content: center;
   width: max-content;
 }
+
 .menu-arrow-div {
   padding-top: 42px;
   padding-left: 30px;
 }
-.menu-icon-div {
 
-}
-
-
-
-/* .menu-svg:enabled {
-  transform:rotate(0.25turn);
-} */
 
 a {
   text-decoration: none!important
@@ -148,8 +148,6 @@ footer {
 
 
 
-
-
 /*MEDIA QUERIES */
 
 @media (min-width: 250px) and (max-width: 479px) {
@@ -165,6 +163,9 @@ footer {
     height: 18px;
     margin-right: 12px !important;
     margin-top: 14px !important;
+  }
+  .main-image-div, .next-image-div, .main-intro {
+    max-width: 400px;
   }
 
   footer {
@@ -187,15 +188,17 @@ footer {
     margin-right: 20px !important;
     margin-top: 14px !important;
   }
+  .main-image-div, .next-image-div, .main-intro {
+    max-width: 500px;
+  }
+
   footer {
     font-size: .7em;
   }
 }
 
 @media (min-width: 768px) and (max-width: 1024px) {
-  .App {
-    grid-template-columns: 1fr 600px 1fr;
-  }
+
 
   .logo-div {
     width: 125px;
@@ -204,8 +207,6 @@ footer {
   .main-image-div{
     max-width: 600px;
     margin-top: 20px;
-    grid-column-start: 2;
-    grid-row-start: 2;
     margin-bottom: 300px;
     /* opacity: .8; */
   }
