--- a/portfolio/src/menuIconKeyframes.css
+++ b/portfolio/src/menuIconKeyframes.css
@@ -4,6 +4,15 @@
     transform: rotate(0deg);
 }
   to {
+    transform: rotate(360deg);
+ }
+}
+
+@keyframes spinBackward {
+  from {
+    transform: rotate(0deg);
+}
+  to {
     transform: rotate(-360deg);
  }
 }
