got menu arrows to spin individually

--- a/portfolio/src/App.css
+++ b/portfolio/src/App.css
@@ -110,6 +110,9 @@ html, body {
   display: flex;
   align-content: center;
   width: max-content;
+  height: max-content;
+  cursor: pointer;
+  /* background-color: red; */
 }/*FIXME put this into AppBar*/
 
 
