--- a/portfolio/src/App.css
+++ b/portfolio/src/App.css
@@ -1,39 +1,44 @@
 * {
   /* font-family: 'Roboto Condensed', sans-serif; */
-  font-family: 'Abel', sans-serif;
+  font-family: 'IBM Plex Mono', monospace;
 
 }
 
 html, body {
   /* overflow-x: hidden; */
-  width: 100%;
-  height: 100%;
+  width: 10vw;
+  height: 100vh;
   background-color: rgb(230, 230, 230);
 }
 
 .App {
   display: grid;
-  grid-template-columns: 8px 1% 125px 750px 1fr;
+  grid-template-columns: 8px 1% 125px auto auto;
   grid-template-rows: 50px 350px 200px 400px 600px 100px auto;
   grid-column-gap: 10px;
   grid-row-gap: 10px;
 }
 
-@keyframes logo {
-  from {left: -70px; opacity: 0}
-  to {left: 18px; opacity: .8;}
-} /*FIXME put this into RenderLogo*/
+@keyframes navFadeIn {
+  from {margin-top: -64px; opacity: 0;}
+  to {margin-top: 0px; opacity: .8;}
+}
+
+@keyframes footerFadeIn {
+  from {margin-bottom: -50px; opacity: 0;}
+  to {margin-bottom: 0px; opacity: .8;}
+}
 
 .logo-div {
   opacity: .8;
   position: fixed;
   width: 125px;
-  left: 18px;
+  /* left: 18px; */
   margin-top: 80px;
   grid-column-start: 2;
   grid-row-start: 2;
-  animation-name: logo;
-  animation-duration: .8s;
+  /* animation-name: logo;
+  animation-duration: .8s; */
 }/*FIXME put this into RenderLogo*/
 
 .logo-svg {
@@ -49,11 +54,9 @@ html, body {
   /* opacity: .8; */
 }
 
-.web-design-image {
-  max-width: 100%;
-}
 
-.into-headline {
+
+.intro-headline {
   text-transform: uppercase;
   font-weight: bold;
 }
@@ -70,16 +73,11 @@ html, body {
 }
 
 .intro-text {
-  /* padding-left: 50px; */
-  /* padding-right: 50px; */
-  /* position: fixed; */
-  font-size: 1.1em;
-  /* background-color: pink; */
-  /* width: 800px; */
+  font-size: 1.1em
 }
 
 .next-image-div {
-  /* width: 750px; */
+  width: 750px;
   display: flex;
   align-items: center;
   height: auto;
@@ -99,13 +97,10 @@ html, body {
   margin-top: 50px;
 }
 
-.next-image, .js-comp-image {
-
+.next-image, .js-comp-image, .web-design-image {
   max-width: 100%;
   /* padding: 50px; */
 }
-
-
 .menu-item-wrapper {
   display: flex;
   align-content: center;
@@ -114,9 +109,6 @@ html, body {
   cursor: pointer;
   /* background-color: red; */
 }/*FIXME put this into AppBar*/
-
-
-
 
 a {
   text-decoration: none!important
@@ -139,7 +131,14 @@ a {
   grid-row-start: 7;
 }
 
+.top-nav {
+  animation-name: navFadeIn;
+  animation-duration: .8s;
+}
+
 footer {
+  animation-name: footerFadeIn;
+  animation-duration: .8s;
   left: 0;
   bottom: 0;
   position: fixed;
@@ -148,7 +147,7 @@ footer {
   align-items: center;
   padding: 8px;
   background-color: black;
-  opacity: .8;
+  opacity: .8!important;
   width: 100vw;
   height: 19px;
   font-size: .8em;
@@ -156,7 +155,6 @@ footer {
   color: white;
   grid-row-start: 6;
   grid-column-start: 1;
-  /* box-shadow: rgba(0, 0, 0, 0.12) 0px -1px 6px, rgba(0, 0, 0, 0.12) 0px -1px 4px; */
 }/*FIXME put this into Footer*/
 
 
@@ -176,7 +174,7 @@ footer {
     margin-right: 12px !important;
     margin-top: 14px !important;
   }
-  .main-image-div, .next-image-div, .main-intro {
+  .main-image-div, .next-image-div, .main-intro, .js-comp-image-div {
     max-width: 400px;
   }
 
@@ -200,7 +198,7 @@ footer {
     margin-right: 20px !important;
     margin-top: 14px !important;
   }
-  .main-image-div, .next-image-div, .main-intro {
+  .main-image-div, .next-image-div, .main-intro, .js-comp-image-div {
     max-width: 500px;
   }
 
@@ -226,7 +224,7 @@ footer {
   width: 600px;
     /* background-color: green; */
   }
-  .next-image-div {
+  .next-image-div, .js-comp-image-div {
     width: 600px;
 
   }
