--- a/portfolio/src/App.css
+++ b/portfolio/src/App.css
@@ -1,6 +1,7 @@
 * {
   /* font-family: 'Roboto Condensed', sans-serif; */
-  font-family: 'IBM Plex Mono', monospace;
+  /* font-family: 'Helvetica'; */
+  font-family: 'Jura', sans-serif;
 
 }
 
@@ -19,26 +20,23 @@ html, body {
   grid-row-gap: 10px;
 }
 
+.top-nav {
+  animation-name: navFadeIn;
+  animation-duration: .8s;
+}
+
 @keyframes navFadeIn {
   from {margin-top: -64px; opacity: 0;}
   to {margin-top: 0px; opacity: .8;}
-}
-
-@keyframes footerFadeIn {
-  from {margin-bottom: -50px; opacity: 0;}
-  to {margin-bottom: 0px; opacity: .8;}
 }
 
 .logo-div {
   opacity: .8;
   position: fixed;
   width: 125px;
-  /* left: 18px; */
   margin-top: 80px;
   grid-column-start: 2;
   grid-row-start: 2;
-  /* animation-name: logo;
-  animation-duration: .8s; */
 }/*FIXME put this into RenderLogo*/
 
 .logo-svg {
@@ -46,15 +44,11 @@ html, body {
 }/*FIXME put this into RenderLogo*/
 
 .main-image-div{
-
   margin-top: 20px;
   grid-column-start: 4;
   grid-row-start: 2;
   margin-bottom: 300px;
-  /* opacity: .8; */
 }
-
-
 
 .intro-headline {
   text-transform: uppercase;
@@ -62,7 +56,7 @@ html, body {
 }
 
 .main-intro {
-  /* width: 750px; */
+  width: 750px;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -99,7 +93,7 @@ html, body {
 
 .next-image, .js-comp-image, .web-design-image {
   max-width: 100%;
-  /* padding: 50px; */
+
 }
 .menu-item-wrapper {
   display: flex;
@@ -114,26 +108,17 @@ a {
   text-decoration: none!important
 }
 
-.nav-icon {
-  fill: white;
-  width: 26px;
-/*FIXME put this into navButtons*/
-}
-
-
-.nav-icon:active {
-  fill: grey;
-}/*FIXME put this into navButtons*/
-
 .bottom-space {
   height: 100px;
   /* background-color: pink; */
   grid-row-start: 7;
 }
 
-.top-nav {
-  animation-name: navFadeIn;
-  animation-duration: .8s;
+
+
+@keyframes footerFadeIn {
+  from {margin-bottom: -50px; opacity: 0;}
+  to {margin-bottom: 0px; opacity: .8;}
 }
 
 footer {
@@ -146,8 +131,8 @@ footer {
   justify-content: center;
   align-items: center;
   padding: 8px;
-  background-color: black;
-  opacity: .8!important;
+  background-color: #547373;
+  opacity: .9;
   width: 100vw;
   height: 19px;
   font-size: .8em;
