--- a/portfolio/src/App.css
+++ b/portfolio/src/App.css
@@ -107,6 +107,15 @@ html, body {
   color: white;
   width: 750px;
   height: max-content;
+  margin-top: 30px;
+  margin-bottom: 60px;
+}
+button {
+  height: 20px;
+  margin-bottom: 10px;
+  margin-right: 10px;
+  margin-left: 10px;
+
 }
 
 #recipe-line-one {
@@ -121,9 +130,10 @@ html, body {
   padding: 10px;
 }
 
-h1 {
+#drink-name, #instruction-p {
   padding: 10px;
 }
+
 
 #bottom-space {
   height: 50px;
