--- a/portfolio/src/App.css
+++ b/portfolio/src/App.css
@@ -91,70 +91,36 @@ html, body {
   margin-top: 50px;
 }
 
-.fetch-drinks {
-  display: flex;
 
-}
-
-
-
-.cocktail-div {
+.robot {
   grid-column-start: 4;
   grid-row-start: 6;
   display: flex;
   flex-direction: column;
-  background-color: rgba(0, 0, 0, 0.8);
-  color: white;
-  width: 750px;
-  height: max-content;
-  margin-top: 30px;
-  margin-bottom: 60px;
+  justify-content: flex-end;
+  /* background-color: rgba(0, 0, 0, 0.8); */
+  /* color: white; */
+  width: 300px;
+  height: 350px;
+  /* margin-top: 30px;
+  margin-bottom: 60px; */
 }
+
 button {
-  height: 20px;
+  height: 30px;
   margin-bottom: 10px;
   margin-right: 10px;
   margin-left: 10px;
 
 }
 
-#recipe-line-one {
-  /* background-color: pink; */
-  margin-left: 40px;
-  margin-top: 100px;
-}
-
-#cocktail-image {
-  max-height: 350px;
-  width: auto;
-  padding: 10px;
-}
-
-#drink-name, #instruction-p {
-  padding: 10px;
-}
-
-
-#bottom-space {
-  height: 50px;
-  width: 400px;
-  /* background-color: red; */
-    grid-row-start: 7;
-}
-
 .next-image, .js-comp-image, .web-design-image {
   max-width: 100%;
 }
 
-
-
-
 a {
   text-decoration: none!important
 }
-
-
-
 
 @keyframes footerFadeIn {
   from {margin-bottom: -50px; opacity: 0;}
