--- a/portfolio/src/App.css
+++ b/portfolio/src/App.css
@@ -96,26 +96,38 @@ html, body {
   to {transform: scale(1.2); color: red}
 }
 
-.fa-arrow-up{
+
+.fa-arrow-left{
   animation-iteration-count: infinite;
   animation-direction: alternate;
   animation-name: arrowPulse;
-  animation-duration: 1s;
+  animation-duration: .5s;
   align-self: center;
 }
 
-.robot {
+.robot-wrapper {
   grid-column-start: 4;
   grid-row-start: 6;
   display: flex;
+  flex-direction: row;
+  align-items: flex-end;
+  width: 800px;
+  height: 500px;
+
+}
+
+.robot {
+  display: flex;
   flex-direction: column;
   justify-content: flex-end;
-  /* background-color: rgba(0, 0, 0, 0.8); */
-  /* color: white; */
-  width: 700px;
-  height: 500px;
-  /* margin-top: 30px;
-  margin-bottom: 60px; */
+  width: 300px;
+  height: 600px;
+
+}
+
+.robot-announce {
+  margin-bottom: 50px;
+  margin-left: -30px;
 }
 
 
